--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "description": "Boilerplate for games using TS and pixi.js",
   "scripts": {
-    "tsc-compile": "tsc -w -p tsconfig.json",
     "start-dev": "npm run collect-assets && npm run webpack-prod && npm run webpack-dev",
     "---- Use commands above ----": "",
     "webpack-dev": "webpack-dev-server --config webpack.config.dev.js",
     "webpack-prod": "webpack --config webpack.config.prod.js",
-    "collect-assets": "node ./assetsCollector.js",
-    "tsc-init": "tsc --init"
+    "collect-assets": "node ./assetsCollector.js"
   },
   "repository": {},
   "sub-repositories": [],
@@ -22,15 +20,15 @@
     "pixi.js": "^5.3.3"
   },
   "devDependencies": {
-    "@types/pixi.js": "^5.0.0",
-    "@types/tween.js": "^18.5.1",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "html-webpack-plugin": "^4.2.0",
-    "ts-loader": "^8.0.2",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "source-map-loader": "^0.2.4",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
