Minor refactoring and cleaning up

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
         "paths": {
             "@libs/*": ["libs/*"],
             "@game/*": ["src/game/*"],
-            "@config/*": ["src/configs/*"],
+            "@configs/*": ["src/configs/*"],
             "@assets": ["assets.ts"],
             "@fsm/*": ["src/fsm/*"]
         }
